fix:get image
